@@ -20,10 +20,12 @@
 
 package org.matsim.contrib.dvrp.router;
 
-import java.io.File;
+import java.net.URL;
 import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
 
+import com.google.inject.*;
 import org.matsim.api.core.v01.network.Network;
 import org.matsim.contrib.common.zones.ZoneSystem;
 import org.matsim.contrib.common.zones.ZoneSystemUtils;
@@ -37,20 +39,20 @@ import org.matsim.core.config.ConfigGroup;
 import org.matsim.core.config.groups.GlobalConfigGroup;
 import org.matsim.core.config.groups.QSimConfigGroup;
 import org.matsim.core.network.NetworkUtils;
-import org.matsim.core.network.algorithms.NetworkCleaner;
 import org.matsim.core.network.algorithms.TransportModeNetworkFilter;
 
 import com.google.common.base.Preconditions;
-import com.google.inject.Inject;
-import com.google.inject.Key;
-import com.google.inject.Singleton;
 import com.google.inject.name.Names;
+import org.matsim.core.router.RoutingModule;
 
 /**
  * @author Michal Maciejewski (michalm)
  */
 public class DvrpModeRoutingNetworkModule extends AbstractDvrpModeModule {
 	private final boolean useModeFilteredSubnetwork;
+	private final String modalCachePath;
+
+	public final static String TT_MATRIX_ZONE_SYSTEM = "ttMatrix";
 
 	@Inject
 	private DvrpConfigGroup dvrpConfigGroup;
@@ -61,41 +63,50 @@ public class DvrpModeRoutingNetworkModule extends AbstractDvrpModeModule {
 	@Inject
 	private QSimConfigGroup qSimConfigGroup;
 
-	public DvrpModeRoutingNetworkModule(String mode, boolean useModeFilteredSubnetwork) {
+	public DvrpModeRoutingNetworkModule(String mode, boolean useModeFilteredSubnetwork, String modalCachePath) {
 		super(mode);
 		this.useModeFilteredSubnetwork = useModeFilteredSubnetwork;
+		this.modalCachePath = modalCachePath;
+	}
+
+	public DvrpModeRoutingNetworkModule(String mode, boolean useModeFilteredSubnetwork) {
+		this(mode, useModeFilteredSubnetwork, null);
 	}
 
 	@Override
 	public void install() {
 		if (useModeFilteredSubnetwork) {
 			//filter out the subnetwork
-			checkUseModeFilteredSubnetworkAllowed(getConfig(), getMode());
+			String mode = getMode();
+			checkUseModeFilteredSubnetworkAllowed(getConfig(), mode);
 			bindModal(Network.class).toProvider(modalProvider(getter -> {
 				Network subnetwork = NetworkUtils.createNetwork(getConfig().network());
 				new TransportModeNetworkFilter(
 						getter.getNamed(Network.class, DvrpGlobalRoutingNetworkProvider.DVRP_ROUTING)).filter(
-						subnetwork, Collections.singleton(getMode()));
-				new NetworkCleaner().run(subnetwork);
+								subnetwork, Collections.singleton(mode));
+				NetworkUtils.cleanNetwork(subnetwork, Set.of(mode));
 				return subnetwork;
 			})).asEagerSingleton();
+
+			modalMapBinder(String.class, ZoneSystem.class).addBinding(TT_MATRIX_ZONE_SYSTEM).toProvider(modalProvider(getter -> {
+				Network network = getter.getModal(Network.class);
+				DvrpTravelTimeMatrixParams matrixParams = dvrpConfigGroup.getTravelTimeMatrixParams();
+				return ZoneSystemUtils.createZoneSystem(getConfig().getContext(), network,
+						matrixParams.getZoneSystemParams(), getConfig().global().getCoordinateSystem(), zone -> true);
+			}));
 
 			//use mode-specific travel time matrix built for this subnetwork
 			//lazily initialised: optimisers may not need it
 			bindModal(TravelTimeMatrix.class).toProvider(modalProvider(
 					getter -> {
-						Network network = getter.getModal(Network.class);
+                        ZoneSystem zoneSystem = getter.getModal(new TypeLiteral<Map<String, Provider<ZoneSystem>>>() {}).get(TT_MATRIX_ZONE_SYSTEM).get();
 						DvrpTravelTimeMatrixParams matrixParams = dvrpConfigGroup.getTravelTimeMatrixParams();
-						ZoneSystem zoneSystem = ZoneSystemUtils.createZoneSystem(getConfig().getContext(), network,
-							matrixParams.getZoneSystemParams(), getConfig().global().getCoordinateSystem(), zone -> true);
-						
-						
-						if (matrixParams.cachePath == null) {
-							return FreeSpeedTravelTimeMatrix.createFreeSpeedMatrix(network, zoneSystem, matrixParams, globalConfigGroup.getNumberOfThreads(),
+						if (modalCachePath == null) {
+							return FreeSpeedTravelTimeMatrix.createFreeSpeedMatrix(getter.getModal(Network.class), zoneSystem, matrixParams, globalConfigGroup.getNumberOfThreads(),
 								qSimConfigGroup.getTimeStepSize());
 						} else {
-							File cachePath = new File(ConfigGroup.getInputFileURL(getConfig().getContext(), matrixParams.cachePath).getPath());
-							return FreeSpeedTravelTimeMatrix.createFreeSpeedMatrixFromCache(network, zoneSystem, matrixParams, globalConfigGroup.getNumberOfThreads(),
+							URL cachePath = ConfigGroup.getInputFileURL(getConfig().getContext(), modalCachePath);
+							return FreeSpeedTravelTimeMatrix.createFreeSpeedMatrixFromCache(getter.getModal(Network.class), zoneSystem, matrixParams, globalConfigGroup.getNumberOfThreads(),
 								qSimConfigGroup.getTimeStepSize(), cachePath);
 						}
                     })).in(Singleton.class);
@@ -110,7 +121,7 @@ public class DvrpModeRoutingNetworkModule extends AbstractDvrpModeModule {
 	}
 
 	public static void checkUseModeFilteredSubnetworkAllowed(Config config, String mode) {
-		Set<String> dvrpNetworkModes = DvrpConfigGroup.get(config).networkModes;
+		Set<String> dvrpNetworkModes = DvrpConfigGroup.get(config).getNetworkModes();
 		Preconditions.checkArgument(dvrpNetworkModes.isEmpty() || dvrpNetworkModes.contains(mode),
 				"DvrpConfigGroup.networkModes must either be empty or contain DVRP mode: %s when 'useModeFilteredSubnetwork' is enabled for this mode",
 				mode);
